[tool.poetry]
name = "tor-network-core"
version = "0.1.0"
description = ""
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
