[tool.poetry]
name = "tor-network-core"
version = "0.1.0"
description = ""
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
selenium = "^4.31.0"
webdriver-manager = "^4.0.2"
packaging = "^25.0"
tbselenium = "^0.9.0"
get-gecko-driver = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
